--- a/index.html
+++ b/index.html
@@ -88,6 +88,17 @@
                         identifying critical bugs and documenting detailed error reports to ensure 
                         product stability before release.
                     </p>
+                    <!-- PROJECT SCREENSHOTS -->
+                    <div class="project-screenshots">
+                        <img src="images/Sprint 1 (Aplicación Urban Routes).png" alt="Sprint 1 - Urban Routes Application Interface">
+                        <img src="images/Sprint 1 (Casos de prueba Urban Routes).png" alt="Sprint 1 - Test Cases Documentation">
+                        <img src="images/Sprint 1 (Pruebas Urban Routes).png" alt="Sprint 1 - Test Execution">
+                        <img src="images/Sprint 1 Urban Routes (Botón mapa relieve).png" alt="Sprint 1 - Relief Map Testing">
+                        <img src="images/Sprint 1 Urban Routes (mapa satélite).png" alt="Sprint 1 - Satellite Map Testing">
+                        <img src="images/Sprint 1 Urban Routes (objetos 3D).png" alt="Sprint 1 - 3D Objects Validation">
+                        <img src="images/Sprint 1 Urban Routes (Visualización de objetos).png" alt="Sprint 1 - Object Visualization">
+                        <img src="images/Sprint 1 Urban Routes (Zoom predeterminado).png" alt="Sprint 1 - Zoom Functionality">
+                    </div>
                     <div class="project-technologies">
                         <span class="tech-tag">Manual Testing</span>
                         <span class="tech-tag">Bug Reporting</span>
@@ -118,6 +129,16 @@
                         mind maps, flowcharts, and test cases using equivalence partitioning and 
                         boundary value analysis techniques.
                     </p>
+                    <!-- PROJECT SCREENSHOTS -->
+                    <div class="project-screenshots">
+                        <img src="images/Sprint 2 Urban Routes (clases de equivalencia).png" alt="Sprint 2 - Equivalence Classes">
+                        <img src="images/Sprint 2 Urban Routes (Diagrama de flujo).png" alt="Sprint 2 - Flowchart">
+                        <img src="images/Sprint 2 Urban Routes (Diagrama de flujo detalle).png" alt="Sprint 2 - Detailed Flowchart">
+                        <img src="images/Sprint 2 Urban Routes (mapa mental detalle).png" alt="Sprint 2 - Mind Map Detail">
+                        <img src="images/Sprint 2 Urban Routes (mapa mental drawio).png" alt="Sprint 2 - Mind Map in Draw.io">
+                        <img src="images/Sprint 2 Urban Routes (mapa mental funcionalidad).png" alt="Sprint 2 - Functionality Mind Map">
+                        <img src="images/Sprint 2 Urban Routes Casos de prueba (tiempo costo de viaje).png" alt="Sprint 2 - Time and Cost Test Cases">
+                    </div>
                     <div class="project-technologies">
                         <span class="tech-tag">Test Case Design</span>
                         <span class="tech-tag">Requirements Analysis</span>
@@ -148,6 +169,13 @@
                         browsers and screen resolutions, creating checklists and test cases to ensure 
                         consistent user experience.
                     </p>
+                     <!-- PROJECT SCREENSHOTS -->
+                    <div class="project-screenshots">
+                        <img src="images/Sprint 3 Urban Routes (casos de prueba boton reservar).png" alt="Sprint 3 - Reserve Button Test Cases">
+                        <img src="images/Sprint 3 Urban Routes (casos de prueba función de alquiler).png" alt="Sprint 3 - Rental Function Test Cases">
+                        <img src="images/Sprint 3 Urban Routes (Lista de comprobación del diseño).png" alt="Sprint 3 - Design Checklist">
+                        <img src="images/Sprint 3 Urban Routes (Lista de comprobación método de pago y agregar tarjeta).png" alt="Sprint 3 - Payment Method Checklist">
+                    </div>
                     <div class="project-technologies">
                         <span class="tech-tag">UI Testing</span>
                         <span class="tech-tag">Cross-browser Testing</span>
@@ -179,6 +207,15 @@
                         backend functionality for kits and delivery services, ensuring proper error 
                         handling and data validation.
                     </p>
+                     <!-- PROJECT SCREENSHOTS -->
+                    <div class="project-screenshots">
+                        <img src="images/Sprint 4 (Casos de prueba).png" alt="Sprint 4 - API Test Cases">
+                        <img src="images/Sprint 4 (Jira Informe de errores).png" alt="Sprint 4 - JIRA Bug Reports">
+                        <img src="images/Sprint 4 (Postman).png" alt="Sprint 4 - Postman Testing">
+                        <img src="images/Sprint 4 (Postman agregar productos).png" alt="Sprint 4 - Postman Add Products">
+                        <img src="images/Sprint 4 (Postman crear kit).png" alt="Sprint 4 - Postman Create Kit">
+                        <img src="images/Sprint 4 (Postman Requisito 2).png" alt="Sprint 4 - Postman Requirement 2">
+                    </div>
                     <div class="project-technologies">
                         <span class="tech-tag">API Testing</span>
                         <span class="tech-tag">Postman</span>
