--- a/index.html
+++ b/index.html
@@ -91,11 +91,11 @@
                     
                     <!-- PROJECT SCREENSHOTS -->
                     <div class="project-screenshots">
-                        <img src="images/Sprint 1 (Aplicación Urban Routes).png" alt="Sprint 1 - Urban Routes Application Interface">
+                        <img src="images/Sprint 1 (Aplicacion Urban Routes).png" alt="Sprint 1 - Urban Routes Application Interface">
                         <img src="images/Sprint 1 (Casos de prueba Urban Routes).png" alt="Sprint 1 - Test Cases Documentation">
                         <img src="images/Sprint 1 (Pruebas Urban Routes).png" alt="Sprint 1 - Test Execution">
                         <img src="images/Sprint 1 Urban Routes (Botón mapa relieve).png" alt="Sprint 1 - Relief Map Testing">
-                        <img src="images/Sprint 1 Urban Routes (mapa satélite).png" alt="Sprint 1 - Satellite Map Testing">
+                        <img src="images/Sprint 1 Urban Routes (mapa satelite).png" alt="Sprint 1 - Satellite Map Testing">
                         <img src="images/Sprint 1 Urban Routes (objetos 3D).png" alt="Sprint 1 - 3D Objects Validation">
                         <img src="images/Sprint 1 Urban Routes (Visualización de objetos).png" alt="Sprint 1 - Object Visualization">
                         <img src="images/Sprint 1 Urban Routes (Zoom predeterminado).png" alt="Sprint 1 - Zoom Functionality">
